# onchain-agent-mmanthe37

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  bun.lockb  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  check.yml  format.yml  lint.yml
agent-backend/: README.md  pyproject.toml
agent-frontend/: .env  .env.local  bun.lockb  package.json  pyproject.toml
agent-frontend/api/: index.py
agent-frontend/app/: page.tsx  utils.tsx
agent-frontend/app/components/: Agent.tsx  AgentComponent.tsx  AgentProfile.tsx  AgentStats.tsx  ChatInput.tsx  Footer.tsx  LanguageSelector.tsx  Navbar.tsx  Stream.tsx  TerminalCursor.tsx
agent-frontend/app/svg/: CopySvg.tsx  NftSvg.tsx  SwapSvg.tsx  TokenSvg.tsx
api/: agent.py  constants.py  index.py  inference.py  utils.py
app/: constants.ts  providers.tsx  translations.ts  types.ts  utils.tsx
app/components/: Agent.tsx  AgentAssets.tsx  AgentBalance.tsx  AgentProfile.tsx  AgentStats.tsx  Chat.tsx  ChatInput.tsx  Footer.tsx  LanguageSelector.tsx  Navbar.tsx  Stream.tsx  StreamItem.tsx  TimeDisplay.tsx
app/hooks/: useChat.ts  useGetNFTs.ts  useGetNfts.ts  useGetTokens.ts
app/svg/: CopySvg.tsx  NftSvg.tsx  RequestSvg.tsx  SendSvg.tsx  SwapSvg.tsx  TokenSvg.tsx  WalletSvg.tsx
cdp-agentkit-core/: README.md
cdp-langchain/: pyproject.toml
